# parquetframe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT.md  CONTEXT_CONTINUING.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MERGE_REQUEST_PHASE3.4.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE3.4_TASKS_6-8_IMPLEMENTATION_PLAN.md  PHASE3.5_INTEGRATION_PLAN.md  PHASE_2_PROGRESS.md  PHASE_3.5_3.6_COMPLETION.md  PHASE_3.5_COMPLETION_SUMMARY.md  PHASE_3.5_DEVELOPMENT_PLAN.md  PHASE_3.5_INTEGRATION_TEST_SUMMARY.md  PHASE_3.5_PROGRESS.md  PR_DESCRIPTION.md  PR_PHASE7A.md  PR_RAG_VECTOR.md  PULL_REQUEST_PHASE_3.5.md  PYPI_SETUP.md  README.md  RELEASE.md  RUST_BACKEND_AUDIT_REPORT.md  RUST_BUILD_STATUS.md  SESSION_SUMMARY.md  TASK_1.1_ANALYSIS.md  TESTING.md  TWO_GRAPH_ARCHITECTURE_VERIFICATION.md  architecture_diagram.md  build_report.txt  build_report_after_fixes.txt  complete_phase0.sh  dac_demo.html  dac_yaml_demo.html  debug_fixture_test.py  debug_mock_test.py  filtered_posts.parquet  (+15 more)
.cargo/: config.toml
.github/workflows/: README_RUST.md  docs.yml  release.yml  test.yml  wheels.yml
User/: User.parquet  _metadata.yaml  _schema.yaml  delta_log.jsonl
benchmarks/: README.md  rust_performance.py  rust_vs_python.py  time_benchmarks.py
crates/pf-fin-core/: Cargo.toml
crates/pf-geo-core/: Cargo.toml
crates/pf-graph-core/: Cargo.toml
crates/pf-io-core/: Cargo.toml
crates/pf-py/: Cargo.toml
crates/pf-py/src/: fin.rs  geo.rs  graph.rs  io.rs  lib.rs  tetnus.rs  tetnus_llm.rs  tetnus_nn.rs  time.rs  workflow.rs
crates/pf-workflow-core/: Cargo.toml
crates/pf-workflow-core/benches/: workflow_benchmarks.rs
crates/pf-workflow-core/examples/: cancellation.rs  parallel_execution.rs  progress_tracking.rs
crates/pf-workflow-core/src/: config.rs  dag.rs  error.rs  executor.rs  lib.rs  metrics.rs  pools.rs  progress.rs  scheduler.rs  step.rs
crates/pf-workflow-core/src/executors/: http.rs  mod.rs  parquet.rs
crates/pf-workflow-core/tests/: integration_tests.rs
crates/tetnus-coral-driver/: Cargo.toml
crates/tetnus-llm/: Cargo.toml
docs/: RESTRUCTURE_MAP.md  TODO_missing_docs.md  advanced.md  ai-features.md  analytics.md  api.md  api_reference.md  architecture.md  backends.md  benchmarks.md  changelog.md  contributing.md  examples.md  first-steps.md  formats.md  index.md  installation.md  performance.md  quickstart.md  usage.md
docs/adr/: 0001-next-generation-architecture.md  0002-make-phase2-default-api.md  0003-rust-first-integration.md
docs/ai/: prompts.md  queries.md  setup.md
docs/ai-powered-features/: index.md  nl-queries.md  overview.md  prompts.md  setup.md  usage-guide.md
docs/analytics-statistics/: benchmarks.md  index.md  timeseries.md
docs/api/: cli.md  core.md  entities.md
docs/bio/: index.md  operations.md  parallel.md
docs/bioframe-integration/: index.md  overview.md  parallel.md
docs/cli/: batch.md  commands.md  examples.md  index.md  installation.md  interactive.md  scripts.md
docs/cli-interface/: batch.md  commands.md  datafusion-integration.md  examples.md  index.md  installation.md  interactive.md  magic-commands.md  overview.md  permissions-tutorial.md  scripts.md
docs/cli-usage/: walkthrough.md
docs/cloud-integration/: aws-s3.md  azure.md  gcp.md  index.md
docs/core-features/: advanced-usage.md.bak  engine-selection.md  file-formats.md  index.md  multi-engine.md
docs/documentation-examples/: api-cli.md  api-core.md  api-entities.md  api-permissions.md  data-exploration.md  examples-gallery.md  index.md  ml-pipelines.md  performance-optimization.md  todo-kanban-example.md
docs/entity-framework/: advanced-examples.md  advanced-queries.md  index.md  relationship-schema.md  relationships.md
docs/finance/: index.md
docs/financial-analytics/: index.md
docs/geo/: index.md
docs/getting-started/: first-steps.md  index.md  installation.md  migration.md  quickstart.md
docs/graph/: tutorial.md
docs/graph-processing/: cli-usage.md  entity-visualization.md  graphar-format.md  graphar-migration.md  index.md  tutorial.md
docs/guides/: graphar_migration_guide.md
docs/issues/: phase2-test-migration.md
docs/knowlogy/: index.md  libraries.md
docs/legacy/: README.md  legacy-backends.md
docs/legacy-migration/: index.md  phase1-backends.md  phase1-overview.md  phase1-to-phase2.md  phase1-usage.md  phase2-overview.md  phase2-user-guide.md
docs/monitoring/: metrics.md
docs/permissions-system/: cli-reference.md  graphar-schema.md  index.md  overview.md  tutorial.md
docs/phase2/: README.md  (+1 more)
examples/: README_TETNUS.md  RUST_PERFORMANCE_INTEGRATION.md  ai-data-exploration.ipynb  dac_demo.py  dac_yaml_demo.py  entity_advanced.py  etl_pipeline.pf.yml  fin_portfolio_analysis.py  fin_stock_analysis.py  fin_trading_signals.py  geo_store_locations.py  ml_pipeline.pf.yml  performance_optimization.py  permissions_tutorial.py  rag_demo.py  rag_vector_demo.py  repl_demo.py  rust_workflow_example.py  sales_dashboard.giza.yml  tetnus_linear_regression.py  tetnus_workflow.yml  time_financial_analysis.py  time_iot_sensors.py  time_sensor_analysis.py  time_web_analytics.py
scripts/: audit_rust_backend.py  fix_doc_links_comprehensive.py  update_doc_links.py  verify_rust_graphar.py
tests/: __init__.py  conftest.py  standalone_verification.py  test_ai_agent.py  test_ai_sql_integration.py  test_avro_rust.py  test_avro_schema_inference.py  test_backend_optimization.py  test_benchmark.py  test_bio.py  test_bio.py.bak  test_cli.py  test_cloud_s3.py  test_comprehensive_features.py  test_config.py  test_coverage_boost.py  test_coverage_gaps.py  test_dac.py  test_dac_yaml.py  test_datacontext.py  test_delta_log.py  test_dpac.py  test_enhanced_interactive.py  test_enhanced_relationships.py  test_entity_visualization.py  test_fluent_sql.py  test_interactive.py  test_interactive_enhanced.py  test_new_features.py  test_orc_rust.py  test_rust_backend.py  test_rust_workflow.py  test_sql.py  test_sql_matrix.py  test_sql_multiformat.py  test_sql_regression.py  test_sql_utilities.py  test_stats.py  test_timeseries.py  test_visualization_api.py  (+3 more)
(+318 files in other folders)
