[workspace]
members = [
    "crates/pf-graph-core",
    "crates/pf-io-core",
    "crates/pf-workflow-core",
    "crates/pf-py"
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Christopher Murray <lee.christopher.murray@gmail.com>"]
repository = "https://github.com/leechristophermurray/parquetframe"

[workspace.dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
rayon = "1.8"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
arrow = "50.0"
parquet = "50.0"
crossbeam = "0.8"
parking_lot = "0.12"
thiserror = "1.0"
