[workspace]
members = [
    "crates/pf-graph-core",
    "crates/pf-io-core",
    "crates/pf-workflow-core",
    "crates/pf-time-core",
    "crates/pf-py",
    "crates/pf-ml"
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Christopher Murray <lee.christopher.murray@gmail.com>"]
repository = "https://github.com/leechristophermurray/parquetframe"

[workspace.dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
chrono = "0.4"
rayon = "1.8"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
arrow = "54.0"
parquet = "54.0"
crossbeam = "0.8"
parking_lot = "0.12"
thiserror = "1.0"
pf-time-core = { path = "crates/pf-time-core" }
pf-workflow-core = { path = "crates/pf-workflow-core" }
