[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parquetframe"
version = "0.1.1"
authors = [
    {name = "ParquetFrame Contributors", email = "parquetframe@example.com"},
]
description = "A universal wrapper for working with dataframes in Python, seamlessly switching between pandas and Dask based on file size"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pandas", "dask", "parquet", "dataframe", "big-data"]
dependencies = [
    "pandas>=2.0.0",
    "dask[dataframe]>=2023.1.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.1.0",
    "black>=23.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
    "tox>=4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]
cli = [
    "click>=8.0",
    "rich>=13.0",  # For enhanced terminal output
    "psutil>=5.8.0",  # For performance monitoring
    "pyyaml>=6.0",  # For YAML workflow support
]

[project.urls]
Homepage = "https://github.com/leechristophermurray/parquetframe"
Documentation = "https://leechristophermurray.github.io/parquetframe/"
Repository = "https://github.com/leechristophermurray/parquetframe.git"
"Bug Tracker" = "https://github.com/leechristophermurray/parquetframe/issues"
Changelog = "https://github.com/leechristophermurray/parquetframe/blob/main/CHANGELOG.md"

[project.scripts]
pframe = "parquetframe.cli:main [cli]"

[tool.hatch.build.targets.wheel]
packages = ["src/parquetframe"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]

# Tool configurations
[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "B017", # assert raises with bare except
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F841", "B017"]

[tool.black]
target-version = ['py39']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["dask.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --cov=parquetframe --cov-fail-under=95 --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "psutil>=7.1.0",
]
