[package]
name = "pf-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "_rustic"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
numpy = "0.26"
serde_json = "1.0"
num_cpus = "1.16"
parking_lot.workspace = true
pf-io-core = { path = "../pf-io-core" }
pf-graph-core = { path = "../pf-graph-core" }
pf-time-core = { path = "../pf-time-core" }
pf-workflow-core = { path = "../pf-workflow-core" }
pf-ml = { path = "../pf-ml" }
pf-fin-core = { path = "../pf-fin-core" }
tokio = { version = "1.35", features = ["full"] }
serde_yaml = "0.9"
